samples/_failures_safe/1761360346_5224f7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6a4c7ff7.c: In function ‘main’:
./samples/SAFE/__tmp_6a4c7ff7.c:141:35: error: expected ‘)’ at end of input
  141 |                     matrix_free(&a
      |                                ~  ^
      |                                   )
./samples/SAFE/__tmp_6a4c7ff7.c:141:21: error: expected declaration or statement at end of input
  141 |                     matrix_free(&a
      |                     ^~~~~~~~~~~
./samples/SAFE/__tmp_6a4c7ff7.c:141:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6a4c7ff7.c:141:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6a4c7ff7.c:141:21: error: expected declaration or statement at end of input
